@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-10T16:14:55Z",
-  "count_outdated" : 415,
-  "uniques_outdated" : 107,
-  "count" : 418,
-  "uniques" : 108,
+  "timestamp" : "2024-06-01T01:01:48Z",
+  "count_outdated" : 418,
+  "uniques_outdated" : 108,
+  "count" : 437,
+  "uniques" : 109,
   "views" : [
     {
-      "timestamp": "2024-05-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "timestamp": "2024-05-31T00:00:00Z",
+      "count": 19,
+      "count_minmax": [ 19, 19 ],
+      "count_decinc": [ 0, 19 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
