@@ -1,10 +1,10 @@
 {
-  "count": 3,
+  "count": 19,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-05-01T00:00:00Z",
-      "count": 3,
+      "timestamp": "2024-05-31T00:00:00Z",
+      "count": 19,
       "uniques": 1
     }
   ]
